# serverpilot-agent

./: README.md
cppagent/: .gitignore  CMakeLists.txt  README.md
cppagent/agent/: __init__.py
cppagent/agent/project_agent/: __init__.py  clang_ast.py  cli.py  coding_agent.py  diagnostics.py  llm_client.py  prompts.py
cppagent/agent/prompts/: interview_qa.md  report.md  system.md
cppagent/cpp_analyzer/include/projectagentcpp/: agent_runtime.hpp  analysis.hpp  clang_enhancer.hpp  cmake_analyzer.hpp  source_analyzer.hpp  text_utils.hpp
cppagent/cpp_analyzer/src/: agent_runtime.cpp  clang_enhancer.cpp  cmake_analyzer.cpp  main.cpp  project_scanner.cpp  report_json.cpp  source_analyzer.cpp
cppagent/examples/: sample_ast.json
cppagent/scripts/: start_webui.sh
cppagent/tests/: smoke_webui.py  test_coding_agent.py  test_diagnostics.py  test_frontend_static.py  test_llm_client.py  test_webui.py
cppagent/webui/: server.py
cppagent/webui/static/: app.js  index.html  styles.css
